refacto + php cs fixer

--- a/application/views/scripts/etablissement/dossiers.phtml
+++ b/application/views/scripts/etablissement/dossiers.phtml
@@ -1,16 +1,11 @@
-<input name = "idEtablissement" type="hidden" value=<?php echo ($this->etablissement['general']['ID_ETABLISSEMENT'])?> />
-
-
-
-
-
+<input name = "idEtablissement" type="hidden" value=<?php echo($this->etablissement['general']['ID_ETABLISSEMENT'])?> />
 <div class='pull-right' >
     <a class='btn' href="<?php echo $this->url(array('controller' => 'dossier', 'action' => 'add', 'id_etablissement' => $this->etablissement['general']['ID_ETABLISSEMENT']), null, true) ?>">Ajouter un dossier</a>
 </div>
 
 <h3>Liste des dossiers</h3>
 
-<?php if(count($this->visites) == 0 && count($this->etudes) == 0 && count($this->autres) == 0) : ?>
+<?php if (count($this->visites) == 0 && count($this->etudes) == 0 && count($this->autres) == 0) : ?>
     <div class='well well-large text-center'>
         <p class='lead'>Il n'y a pas de dossier.</p>
         <p><a href='<?php echo $this->url(array('controller' => 'dossier', 'action' => 'add', 'id_etablissement' => $this->etablissement['general']['ID_ETABLISSEMENT']), null, true) ?>' class='btn btn-large'>Ajouter un dossier</a></p>
@@ -19,22 +14,24 @@
 
 <div class="flexCol" id="content_visites_ets">
 
-<?php if( count($this->visites) > 0 ) : ?>
+<?php if (count($this->visites) > 0) : ?>
     <h4>Visites</h4>
     <ul class='recherche_liste'>
     <?php echo $this->partialLoop('search/results/dossier.phtml', $this->visites); ?>
     <div class="margTop3px" id="divcompleteListeVisite"></div>
     </ul>
     
-    <?php if( ($this->nbEtudes) > $this->nbElemMax) : ?>
+    <?php if (($this->nbEtudes) > $this->nbElemMax) : ?>
     <button class="buttonOpenClose" id="completeListeVisite">Voir plus</button>
     <?php endif?>
 <?php endif ?>
 </div>
 
 <div class="flexCol" id="content_etudes_ets">
-<?php if( count($this->etudes) > 0 ) : ?>
-    <?php if( count($this->visites) > 0  ) echo "<hr />"; ?>
+<?php if (count($this->etudes) > 0) : ?>
+    <?php if (count($this->visites) > 0) {
+    echo "<hr />";
+} ?>
     <h4>Études</h4>
     <ul class='recherche_liste'>
     <?php echo $this->partialLoop('search/results/dossier.phtml', $this->etudes);  ?>
@@ -44,7 +41,7 @@
 
     
     </ul>
-    <?php if( ($this->nbEtudes) > $this->nbElemMax) : ?>
+    <?php if (($this->nbEtudes) > $this->nbElemMax) : ?>
 
     <button class="buttonOpenClose" id="completeListeEtude">Voir plus</button>
     <?php endif ?>
@@ -56,15 +53,17 @@
 </div>
 
 <div class="flexCol" id="content_autres_ets">
-<?php if( count($this->autres) > 0  ) : ?>
-    <?php if( count($this->visites) > 0 || count($this->etudes) > 0) echo "<hr />"; ?>
+<?php if (count($this->autres) > 0) : ?>
+    <?php if (count($this->visites) > 0 || count($this->etudes) > 0) {
+    echo "<hr />";
+} ?>
         <h4>Autres</h4>
         <ul class='recherche_liste'>
             <?php echo $this->partialLoop('search/results/dossier.phtml', $this->autres);  ?>
             <div class='margTop3px' id='divcompleteListeAutres'></div>
         </ul>
 
-        <?php if( ($this->nbAutres) > $this->nbElemMax) : ?>
+        <?php if (($this->nbAutres) > $this->nbElemMax) : ?>
             <button class="buttonOpenClose" id="completeListeAutres">Voir plus</button>
         <?php endif ?>
     <?php endif ?>
