--- a/application/views/scripts/etablissement/dossiers.phtml
+++ b/application/views/scripts/etablissement/dossiers.phtml
@@ -11,55 +11,56 @@
         <p><a href='<?php echo $this->url(array('controller' => 'dossier', 'action' => 'add', 'id_etablissement' => $this->etablissement['general']['ID_ETABLISSEMENT']), null, true) ?>' class='btn btn-large'>Ajouter un dossier</a></p>
     </div>
 <?php else : ?>
+    <div class="flexCol" id="content_visites_ets">
+        <?php if (count($this->visites) > 0) : ?>
+            <h4>Visites</h4>
+            <ul class='recherche_liste'>
+                <?php echo $this->partialLoop('search/results/dossier.phtml', $this->visites); ?>
+                <div class="voir-plus" id="divcompleteListeVisite"></div>
+            </ul>
 
-<div class="flexCol" id="content_visites_ets">
+            <?php if (($this->nbVisites) > $this->nbElemMax) : ?>
+                <button class="buttonOpenClose" id="completeListeVisite">Voir plus</button>
+            <?php endif;
+        endif ?>
+    </div>
 
-<?php if (count($this->visites) > 0) : ?>
-    <h4>Visites</h4>
-    <ul class='recherche_liste'>
-    <?php echo $this->partialLoop('search/results/dossier.phtml', $this->visites); ?>
-    <div class="voir-plus" id="divcompleteListeVisite"></div>
-    </ul>
-    
-    <?php if (($this->nbEtudes) > $this->nbElemMax) : ?>
-    <button class="buttonOpenClose" id="completeListeVisite">Voir plus</button>
-    <?php endif?>
-<?php endif ?>
-</div>
+    <div class="flexCol" id="content_etudes_ets">
+        <?php if (count($this->etudes) > 0) :
+            if (count($this->visites) > 0) : ?>
+                <hr />
+            <?php endif ?>
 
-<div class="flexCol" id="content_etudes_ets">
-<?php if (count($this->etudes) > 0) : ?>
-    <?php if (count($this->visites) > 0) {
-    echo "<hr />";
-} ?>
-    <h4>Études</h4>
-        <ul class='recherche_liste'>
-            <?php echo $this->partialLoop('search/results/dossier.phtml', $this->etudes);  ?>
-            <div class="voir-plus" id='divcompleteListeEtude'></div>
-        </ul>
-    <?php if (($this->nbEtudes) > $this->nbElemMax) : ?>
-    <button class="buttonOpenClose" id="completeListeEtude">Voir plus</button>
-    <?php endif ?>
-<?php endif ?>
-</div>
+            <h4>Études</h4>
+            <ul class='recherche_liste'>
+                <?php echo $this->partialLoop('search/results/dossier.phtml', $this->etudes);  ?>
+                <div class="voir-plus" id='divcompleteListeEtude'></div>
+            </ul>
 
-<div class="flexCol" id="content_autres_ets">
-<?php if (count($this->autres) > 0) : ?>
-    <?php if (count($this->visites) > 0 || count($this->etudes) > 0) {
-        echo "<hr />";
-    } ?>
-        <h4>Autres</h4>
-        <ul class='recherche_liste'>
-            <?php echo $this->partialLoop('search/results/dossier.phtml', $this->autres);  ?>
-            <div class='voir-plus' id='divcompleteListeAutres'></div>
-        </ul>
+            <?php if (($this->nbEtudes) > $this->nbElemMax) : ?>
+                <button class="buttonOpenClose" id="completeListeEtude">Voir plus</button>
+            <?php endif;
+        endif ?>
+    </div>
 
-        <?php if (($this->nbAutres) > $this->nbElemMax) : ?>
-            <button class="btn buttonOpenClose" id="completeListeAutres">Voir plus</button>
-        <?php endif ?>
-    <?php endif ?>
-<?php endif ?>
-</div>
+    <div class="flexCol" id="content_autres_ets">
+        <?php if (count($this->autres) > 0) :
+            if (count($this->visites) > 0 || count($this->etudes) > 0) : ?>
+                <hr />
+            <?php endif ?>
+
+            <h4>Autres</h4>
+            <ul class='recherche_liste'>
+                <?php echo $this->partialLoop('search/results/dossier.phtml', $this->autres);  ?>
+                <div class='voir-plus' id='divcompleteListeAutres'></div>
+            </ul>
+
+            <?php if (($this->nbAutres) > $this->nbElemMax) : ?>
+                <button class="btn buttonOpenClose" id="completeListeAutres">Voir plus</button>
+            <?php endif;
+        endif ?>
+    </div>
+<?php endif; ?>
 
 <script>
     $(document).ready(function() {
