--- a/application/views/scripts/calendrier-des-commissions/generationpv.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationpv.phtml
@@ -124,8 +124,10 @@ foreach($this->membresFiles as $val => $membre){
 						addChamp($dossInfos,'objetDossier', $dossierInfos['OBJET_DOSSIER']);
 						addChamp($dossInfos,'natureDossier', $dossierInfos["LIBELLE_DOSSIERNATURE"]);
 						//addChamp($dossInfos,'effectifEtDegagement',$dossierInfos["effectifEtDegagement"]);
-						addChamp($dossInfos,'descriptionEffectif',$dossierInfos["descriptionEffectif"]);
-						addChamp($dossInfos,'descriptionDegagement',$dossierInfos["descriptionDegagement"]);
+						addChamp($dossInfos,'descriptionEffectifDossier',$dossierInfos["DESCRIPTION_EFFECTIF_DOSSIER"]);
+						addChamp($dossInfos,'descriptionDegagementDossier',$dossierInfos["DESCRIPTION_DEGAGEMENT_DOSSIER"]);
+						addChamp($dossInfos,'descriptionEffectifEtablissement',$dossierInfos["DESCRIPTION_EFFECTIF_ETABLISSEMENT"]);
+						addChamp($dossInfos,'descriptionDegagementEtablissement',$dossierInfos["DESCRIPTION_DEGAGEMENT_ETABLISSEMENT"]);
 
 						$dateComm = new Zend_Date($this->dateComm);
 						addChamp($dossInfos,'dateCommission', $dateComm->get(Zend_Date::DAY." ".Zend_Date::MONTH_NAME." ".Zend_Date::YEAR));
