--- a/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
@@ -40,6 +40,11 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
 				addChamp($dossInfos,'objetDossier', $dossierInfos['OBJET_DOSSIER']);
 				addChamp($dossInfos,'natureDossier', $dossierInfos["LIBELLE_DOSSIERNATURE"]);
 
+				addChamp($dossInfos,'descriptionEffectifDossier',$this->dossierComm[0]['DESCRIPTION_EFFECTIF_DOSSIER']);
+                addChamp($dossInfos,'descriptionDegagementDossier',$this->dossierComm[0]['DESCRIPTION_DEGAGEMENT_DOSSIER']);
+                addChamp($dossInfos,'descriptionEffectifEtablissement',$this->dossierComm[0]['DESCRIPTION_EFFECTIF_ETABLISSEMENT']);
+                addChamp($dossInfos,'descriptionDegagementEtablissement',$this->dossierComm[0]['DESCRIPTION_DEGAGEMENT_ETABLISSEMENT']);
+
 				$dateComm = new Zend_Date($this->dateComm);
 				addChamp($dossInfos,'dateCommission', $dateComm->get(Zend_Date::DAY." ".Zend_Date::MONTH_NAME." ".Zend_Date::YEAR));
 
