--- a/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
@@ -1,5 +1,8 @@
 <?php
 
+use CatoTH\HTML2OpenDocument\Spreadsheet;
+
+
 function addChamp($odf,$nomOdf, $variable){
   try{
     $odf->setVars($nomOdf,$variable, true,'UTF8');
@@ -44,7 +47,12 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                 addChamp($dossInfos,'descriptionDegagementDossier',$this->dossierComm[0]['DESCRIPTION_DEGAGEMENT_DOSSIER']);
                 addChamp($dossInfos,'descriptionEffectifEtablissement',$this->dossierComm[0]['DESCRIPTION_EFFECTIF_ETABLISSEMENT']);
                 addChamp($dossInfos,'descriptionDegagementEtablissement',$this->dossierComm[0]['DESCRIPTION_DEGAGEMENT_ETABLISSEMENT']);
-
+				
+				$od = new \CatoTH\HTML2OpenDocument\Text();
+				$od->addHtmlTextBlock($this->dossierComm[0]['DESCRIPTION_EFFECTIF_DOSSIER'],false);
+				$od->finishAndOutputOdt("montestfichier.odt");
+				var_dump($od);
+				
 				$dateComm = new Zend_Date($this->dateComm);
 				addChamp($dossInfos,'dateCommission', $dateComm->get(Zend_Date::DAY." ".Zend_Date::MONTH_NAME." ".Zend_Date::YEAR));
 
