Modification des informations d'une rubrique

--- a/public/css/formulaire.css
+++ b/public/css/formulaire.css
@@ -10,3 +10,9 @@ label.optional {
 div[id^='saved-rubriques-'] a {
     display: block;
 }
+
+.infos-rubrique {
+	border: 1px dotted #818183;
+	padding: 20px 20px 20px 20px;
+	margin-bottom: 20px;
+}
