--- a/application/views/scripts/formulaire/index.phtml
+++ b/application/views/scripts/formulaire/index.phtml
@@ -1,54 +1,52 @@
 <link rel="stylesheet" href="/css/formulaire.css" />
-<div id="form-container">
-    <?php
-        $arrayKeys = array_keys($this->formulaires);
-        $lastKey = end($arrayKeys);
-    ?>
-    <?php foreach($this->formulaires as $key => $formulaire) : ?>
-        <div class="row-fluid">
-            <h3>
-                <?php echo $formulaire['NOM']; ?>
-            </h3>
+<?php
+    $arrayKeys = array_keys($this->formulaires);
+    $lastKey = end($arrayKeys);
+?>
+<?php foreach($this->formulaires as $key => $formulaire) : ?>
+    <div class="row-fluid">
+        <h3>
+            <?php echo $formulaire['NOM']; ?>
+        </h3>
 
-            <div id="saved-rubriques-<?php echo $formulaire['NOM_INTERNE'] ?>" class="span6">
-                <?php if(count($formulaire['RUBRIQUES']) > 0): ?>
-                    <table class="table table-bordered table-condensed">
-                        <thead>
-                            <tr>
-                                <th>Nom de la rubrique</th>
-                                <th>Afficher la rubrique par défaut</th>
-                                <th id="actions"></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <?php foreach($formulaire['RUBRIQUES'] as $rubrique): ?>
-                                <tr>
-                                    <td><?php echo $rubrique['NOM']; ?></td>
-                                    <td>
-                                        <?php if($rubrique['DEFAULT_DISPLAY']): ?>
-                                            <p class="text-center">
-                                                <i class="icon-ok"></i>
-                                            </p>
-                                        <?php endif ?>
-                                    </td>
-                                    <td>
-                                        <a href="/formulaire/edit/rubrique/<?php echo $rubrique['ID_RUBRIQUE']; ?>">Modifier</a>
-                                        <a href="/formulaire/delete/rubrique/<?php echo $rubrique['ID_RUBRIQUE'] ?>">Supprimer</a>
-                                    </td>
-                                </tr>
-                            <?php endforeach ?>
-                        </tbody>
-                    </table>
-                <?php endif ?>
-            </div>
-
-            <div id="<?php echo $formulaire['NOM_INTERNE'] ?>" class="span4 offset1">
-                <?php echo $this->form; ?>
-            </div>
+        <div id="<?php echo $formulaire['NOM_INTERNE'] ?>" class="span4">
+            <?php echo $this->form; ?>
         </div>
 
-        <?php if($key !== $lastKey): ?>
-            <hr>
-        <?php endif;
-    endforeach ?>
-</div>
+        <div id="saved-rubriques-<?php echo $formulaire['NOM_INTERNE'] ?>" class="span6 offset1">
+            <?php if(count($formulaire['RUBRIQUES']) > 0): ?>
+                <table class="table table-bordered table-condensed">
+                    <thead>
+                        <tr>
+                            <th>Nom de la rubrique</th>
+                            <th>Afficher la rubrique par défaut</th>
+                            <th id="actions"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <?php foreach($formulaire['RUBRIQUES'] as $rubrique): ?>
+                            <tr>
+                                <td><?php echo $rubrique['NOM']; ?></td>
+                                <td>
+                                    <?php if($rubrique['DEFAULT_DISPLAY']): ?>
+                                        <p class="text-center">
+                                            <i class="icon-ok"></i>
+                                        </p>
+                                    <?php endif ?>
+                                </td>
+                                <td>
+                                    <a href="/formulaire/edit/rubrique/<?php echo $rubrique['ID_RUBRIQUE']; ?>">Modifier</a>
+                                    <a href="/formulaire/delete/rubrique/<?php echo $rubrique['ID_RUBRIQUE'] ?>">Supprimer</a>
+                                </td>
+                            </tr>
+                        <?php endforeach ?>
+                    </tbody>
+                </table>
+            <?php endif ?>
+        </div>
+    </div>
+
+    <?php if($key !== $lastKey): ?>
+        <hr>
+    <?php endif;
+endforeach ?>
